Changes based on first round of feedback

--- a/www-root/2column.html
+++ b/www-root/2column.html
@@ -72,8 +72,8 @@
          <span class="fa fa-bars"></span>
          </button>
          <div class="row container-fluid">
-            <div class="col-xs-8">
-               <a href="/"> <img class="msudenver_logo" src="style-assets/media/msudenver-logo.png" alt="MSU Denver Homepage"> </a>
+            <div class="col-xs-7 col-md-push-1">
+               <a href="/"> <img class="msudenver_logo" src="style-assets/media/template-assets/msu-denver-logo.svg" alt="MSU Denver Homepage"> </a>
             </div>
          </div>
       </div>
@@ -169,8 +169,6 @@
                        class="search-text">SEARCH</span></span>
                  </a>
                </li>
-               <li></li>
-               <li></li>
                <li></li>
             </ul>
          </div>
