--- a/www-root/admissions.html
+++ b/www-root/admissions.html
@@ -23,8 +23,8 @@
          <span class="fa fa-bars"></span>
          </button>
          <div class="row container-fluid">
-            <div class="col-xs-8">
-               <a href="/"> <img class="msudenver_logo" src="style-assets/media/msudenver-logo.png" alt="MSU Denver Homepage"> </a>
+            <div class="col-xs-7 col-md-push-1">
+               <a href="/"> <img class="msudenver_logo" src="style-assets/media/template-assets/msu-denver-logo.svg" alt="MSU Denver Homepage"> </a>
             </div>
          </div>
       </div>
@@ -120,8 +120,6 @@
                        class="search-text">SEARCH</span></span>
                  </a>
                </li>
-               <li></li>
-               <li></li>
                <li></li>
             </ul>
          </div>
@@ -664,9 +662,9 @@ $(window).scroll(function(){
               $(".header-fluid").removeClass("header-fluid-change");
               $(".msudenver_logo").removeClass("msudenver_logo_change");
               if( position <= 15 && width> width_threshold) {
-                $("a.btn.btn-default.visit-give-mobile").css("top", "-144px");
-                $("a.btn.btn-default.give-mobile").css("top", "-144px");
-                $("a.btn.btn-default.apply-mobile").css("top", "-144px");
+                $("a.btn.btn-default.visit-give-mobile").css("top", "-132px");
+                $("a.btn.btn-default.give-mobile").css("top", "-132px");
+                $("a.btn.btn-default.apply-mobile").css("top", "-132px");
               }
               if( position > 15 && width > width_threshold) {
                 $(".header-fluid").toggleClass("header-fluid-change");
