--- a/www-root/homepage.html
+++ b/www-root/homepage.html
@@ -22,8 +22,8 @@
          <span class="fa fa-bars"></span>
          </button>
          <div class="row container-fluid">
-            <div class="col-xs-8">
-               <a href="/"> <img class="msudenver_logo" src="style-assets/media/msudenver-logo.png" alt="MSU Denver Homepage"> </a>
+            <div class="col-xs-7 col-md-push-1">
+               <a href="/"> <img class="msudenver_logo" src="style-assets/media/template-assets/msu-denver-logo.svg" alt="MSU Denver Homepage"> </a>
             </div>
          </div>
       </div>
@@ -120,8 +120,6 @@
                  </a>
                </li>
                <li></li>
-               <li></li>
-               <li></li>
             </ul>
          </div>
          <!-- /.navbar-collapse -->
@@ -180,33 +178,33 @@ $(window).scroll(function(){
 			<section class="homepage-feature carousel t4-slide slide" id="homepage-feature-caption">
     <div class="carousel-inner">
         <!-- Carousel sample one -->
-        <div class="homepage-feature-caption-item item active">
+        <a href="#" class="homepage-feature-caption-item item active">
           <div class="col-xs-12 col-md-6 col-md-push-6">
             <img class="img-responsive" src="style-assets/media/placeholder-images/homepage-slide-img.png"
               alt="Great news story headline" />
           </div>
           <div class="col-xs-12 col-md-5 col-md-pull-5">
             <div class="side-container">
-              <h1 class="feature-heading">MSU Denver earns Hispanic-Serving Institution Status.</h1>
+              <h2 class="feature-heading">MSU Denver earns Hispanic-Serving Institution Status.</h2>
               <div class="tagline">That's <span>possible</span> here.</div>
             </div>
                 
           </div>
-        </div>
+        </a>
         <!-- Caurusel sample two -->
-        <div class="homepage-feature-caption-item item">
+        <a href="#" class="homepage-feature-caption-item item">
           <div class="col-xs-12 col-md-6 col-md-push-6"> 
             <img class="img-responsive" src="style-assets/media/placeholder-images/homepage-slide-img2.png"
               alt="Great news story headline" />
           </div>
             <div class="col-xs-12 col-md-5 col-md-pull-5">
                 <div class="side-container">
-                  <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take
-                    off.</h1>
+                  <h2 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take
+                    off.</h2>
                   <div class="tagline">That's <span>possible</span> here.</div>
                 </div>
             </div>
-        </div>
+          </a>
     </div>
     <ol class="carousel-indicators">
       <li data-target="#homepage-feature-caption" data-slide-to="0" class="active"></li>
@@ -217,7 +215,7 @@ $(window).scroll(function(){
 			    <!-- ** Homepage news ** -->
 <section class="homepage-feature" id="homepage-news">
     <div class="home-news-features">
-        <h1 class="feature-heading-large">RELEVANT. ESSENTIAL. DENVER.</h1>
+        <h2 class="feature-heading-large"><img src="style-assets/media/template-assets/RED-logo.svg" alt="">RELEVANT. ESSENTIAL. DENVER.</h2>
           <div class="news-features">
             <!-- regular featured news items -->
                      <div class="news-feature">
@@ -228,8 +226,8 @@ $(window).scroll(function(){
                                    alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
-                                 <h2 class="feature-heading news-feature-heading">Chart topper</h2>
-                                 <h3 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h3>
+                                 <h3 class="feature-heading news-feature-heading">Chart topper</h3>
+                                 <h4>Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h4>
                              </div>
                              </a>
                      </div>
@@ -241,8 +239,8 @@ $(window).scroll(function(){
                                    alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
-                                 <h2 class="feature-heading news-feature-heading">Redefining working class</h2>
-                                 <h3 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h3>
+                                 <h3 class="feature-heading news-feature-heading">Redefining working class</h3>
+                                 <h4>Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h4>
                              </div>
                              </a>
                      </div>
@@ -253,8 +251,8 @@ $(window).scroll(function(){
                                    alt="Great news story headline" />
                              </div>
                              <div class="news-feature-text">
-                                 <h2 class="feature-heading news-feature-heading">The man behind the mic</h2>
-                                 <h3 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h3>
+                                 <h3 class="feature-heading news-feature-heading">The man behind the mic</h3>
+                                 <h4 class="">Vic Vela is a recognizable voice on Colorado public radio - he's also a coice of hope for recovering addicts.</h4>
                              </div>
                              </a>
                      </div><!-- ./ .news-feature-item -->
@@ -268,9 +266,9 @@ $(window).scroll(function(){
 			<!-- ** Hompeage at a glance ** -->
 <section class="homepage-feature" id="homepage-at-a-glance">
     <div class="at-a-glance">
-        <h1 class="feature-heading-large">Metrics that Matter</h1>
+        <h2 class="feature-heading-large">Metrics that Matter</h2>
         <div class="at-a-glance-items">
-            <div class="at-a-glance-item">
+            <a href="#" class="at-a-glance-item">
                 <div class="at-a-glance-img" data-mh="at-a-glance-img">
                     <img src="style-assets/media/placeholder-images/1of5.svg"
                       alt="1 out of 5 Colorado graduates choose MSU Denver" />
@@ -279,8 +277,8 @@ $(window).scroll(function(){
                     <p class="at-a-glance-stat">1 out of 5</p>
                     <p class="at-a-glance-text">Colorado graduates chooses MSU Denver</p>
                 </div>
-            </div><!-- / .ata-glance-item (col) -->
-            <div class="at-a-glance-item">
+            </a><!-- / .ata-glance-item (col) -->
+            <a href="#" class="at-a-glance-item">
                 <div class="at-a-glance-img" data-mh="at-a-glance-img">
                     <img src="style-assets/media/placeholder-images/4year.svg"
                       alt="31.6% first-generation college students" />
@@ -289,8 +287,8 @@ $(window).scroll(function(){
                     <p class="at-a-glance-stat">4 year</p>
                     <p class="at-a-glance-text">Lowest tuition of Colorado's Four-Year Public Universities</p>
                 </div>
-            </div><!-- / .at-a-glance-item (col) -->
-            <div class="at-a-glance-item">
+            </a><!-- / .at-a-glance-item (col) -->
+            <a href="#" class="at-a-glance-item">
                 <div class="at-a-glance-img" data-mh="at-a-glance-img">
                     <img src="style-assets/media/placeholder-images/mastersdegrees.svg"
                       alt="1 out of 5 Colorado graduates choose MSU Denver" />
@@ -299,8 +297,8 @@ $(window).scroll(function(){
                     <p class="at-a-glance-stat">7</p>
                     <p class="at-a-glance-text">Master's Degrees</p>
                 </div>
-            </div>
-            <div class="at-a-glance-item">
+            </a>
+            <a href="#" class="at-a-glance-item">
                 <div class="at-a-glance-img" data-mh="at-a-glance-img">
                     <img src="style-assets/media/placeholder-images/smallclasses.svg"
                       alt="1 out of 5 Colorado graduates choose MSU Denver" />
@@ -309,8 +307,8 @@ $(window).scroll(function(){
                     <p class="at-a-glance-stat">21</p>
                     <p class="at-a-glance-text">Average Class Size of 21 Students</p>
                 </div>
-            </div>
-            <div class="at-a-glance-item">
+            </a>
+            <a href="#" class="at-a-glance-item">
                 <div class="at-a-glance-img" data-mh="at-a-glance-img">
                     <img src="style-assets/media/placeholder-images/86degrees.svg"
                       alt="1 out of 5 Colorado graduates choose MSU Denver" />
@@ -319,8 +317,8 @@ $(window).scroll(function(){
                     <p class="at-a-glance-stat">86</p>
                     <p class="at-a-glance-text">Bachelor's Degrees</p>
                 </div>
-            </div>
-            <div class="at-a-glance-item">
+            </a>
+            <a href="#" class="at-a-glance-item">
                 <div class="at-a-glance-img" data-mh="at-a-glance-img">
                     <img src="style-assets/media/placeholder-images/internships.svg" alt="67 bachelor degree choices" />
                 </div>
@@ -328,7 +326,7 @@ $(window).scroll(function(){
                     <p class="at-a-glance-stat">1300+</p>
                     <p class="at-a-glance-text">Companies and organizations hosting internships</p>
                 </div>
-            </div><!-- / .at-a-glance-item (col) -->
+            </a><!-- / .at-a-glance-item (col) -->
         </div><!-- / .at-a-glance-items (row) -->
         <script>
             (function equalizeHeights(global) {
@@ -369,7 +367,7 @@ $(window).scroll(function(){
 			<section class="homepage-feature" id="homepage-community"
   style="background-image:url(/style-assets/media/template-assets/virtual-tour-bg.png)">
     <div class="hompage-community ">
-        <h1 class="feature-heading-large">What's Possible on a Dynamic Campus in the Heart of the City</h1>
+        <h2 class="feature-heading-large">What's Possible on a Dynamic Campus in the Heart of the City</h2>
         <button class="clearfix main-button"><a href="javascript:void(0)" class="btn homepage-btn">Take our Virtual Tour</a></button>
     </div>
 </section>
@@ -377,7 +375,7 @@ $(window).scroll(function(){
 			<!-- ** Homepage events ** -->
 <section class="homepage-feature" id="homepage-events">
     <div class="home-events">
-        <h1 class="feature-heading-large">What's Happening at MSU Denver</h1>
+        <h2 class="feature-heading-large">What's Happening at MSU Denver</h2>
             <div class="home-event">
                 <a href="javascript:void(0)">
                     <p>
@@ -628,9 +626,9 @@ $(window).scroll(function(){
 					$(".header-fluid").removeClass("header-fluid-change");
 					$(".msudenver_logo").removeClass("msudenver_logo_change");
 					if( position <= 15 && width > width_threshold) {
-						$("a.btn.btn-default.visit-give-mobile").css("top", "-144px");
-						$("a.btn.btn-default.give-mobile").css("top", "-144px");
-						$("a.btn.btn-default.apply-mobile").css("top", "-144px");
+						$("a.btn.btn-default.visit-give-mobile").css("top", "-132px");
+						$("a.btn.btn-default.give-mobile").css("top", "-132px");
+						$("a.btn.btn-default.apply-mobile").css("top", "-132px");
 					}
 					if( position > 15 && width > width_threshold) {
 				    	$(".header-fluid").toggleClass("header-fluid-change");
