--- a/www-root/2column.html
+++ b/www-root/2column.html
@@ -72,7 +72,7 @@
          <span class="fa fa-bars"></span>
          </button>
          <div class="row container-fluid">
-            <div class="col-xs-7 col-md-push-1">
+            <div class="col-xs-8">
                <a href="/"> <img class="msudenver_logo" src="style-assets/media/template-assets/msu-denver-logo.svg" alt="MSU Denver Homepage"> </a>
             </div>
          </div>
@@ -87,17 +87,18 @@
                <a href="/giving" type="button" class="btn btn-default visit-give-mobile give-mobile ">Give</a>
                <a href="/admissions" type="button" class="btn btn-default apply-mobile">Apply</a>
            </div>
-            <ul id="menu-nav" class="nav navbar-nav">
+           <ul class="additional-links nav navbar-nav">
               <li class="collapse navbar-collapse">
-
-                 <ul class="fac-staf-stu-mobile">
-                    <li><a href="/studenthub">Current Students</a></li>
-                    <li class="hide-pipe">|</li>
-                    <li><a href="/facstaff">Faculty &amp; Staff</a></li>
-                    <li class="hide-pipe">|</li>
-                    <li><a href="/employers">Employers</a></li>
-                 </ul>
+                <ul class="fac-staf-stu-mobile">
+                  <li><a href="/studenthub">Current Students</a></li>
+                  <li class="hide-pipe">|</li>
+                  <li><a href="/facstaff">Faculty &amp; Staff</a></li>
+                  <li class="hide-pipe">|</li>
+                  <li><a href="/employers">Employers</a></li>
+                </ul>
               </li>
+           </ul>
+            <ul id="menu-nav" class="nav navbar-nav">
                <li class="dropdown collapse navbar-collapse">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
                   <ul class="dropdown-menu">
@@ -169,7 +170,6 @@
                        class="search-text">SEARCH</span></span>
                  </a>
                </li>
-               <li></li>
             </ul>
          </div>
          <!-- /.navbar-collapse -->
