Add fixes for homepage news header and for hover transitions

--- a/www-root/homepage.html
+++ b/www-root/homepage.html
@@ -223,7 +223,9 @@ $(window).scroll(function(){
 <section class="homepage-feature" id="homepage-news">
     <div class="home-news-features">
         <h2 class="feature-heading-large"><img src="style-assets/media/template-assets/RED-logo.svg" alt="">
-            RELEVANT. ESSENTIAL. DENVER.
+            <div class="header-wrap">
+                <span>RELEVANT.</span> <span>ESSENTIAL.</span> <span>DENVER.</span>
+            </div>
         </h2>
           <div class="news-features">
             <!-- regular featured news items -->
