--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -28,7 +28,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-8 offset-md-4">
-            <h2>What would you do if anything were possible?</h2>
+            <h2>What would you do if anything were <span class="possible-word-reversed">possible</span>?</h2>
           </div>
           <div class="col-xs-12 col-md-8 offset-md-4">
             <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are non-existent and an entire community of peers, mentors, educators, and industry leaders are ready to support you, encourage you and connect with you.</p>
@@ -42,7 +42,7 @@
           <div class="col-xs-12 col-md-8" >
 
             <h2>At MSU Denver, that’s what it feels like to
-reimagine what’s possible in higher
+reimagine what’s <span class="possible-word">possible</span> in higher
 education.</h2>
             <p>We offer a dynamic urban setting, small class
 sizes and an incredible network of organizations
@@ -66,7 +66,7 @@ possible for your future.</p>
 <section class="possible-call-to-action">
 
   <div class="col-xs-12 col-md-10 offset-md-1 well">
-    <h2>Start Your Possible</h2>
+    <h2>Start Your <span class="possible-word">Possible</span></h2>
     <p>
 MSU Denver is where classes lead to careers
 and learners connect with leaders. Our
