added styles for the call to action section

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -39,9 +39,9 @@
         </div>
       </section>
 
-<section>
-<div class="container" >
-          <div class="col-xs-12 col-md-8" >
+<section class="section-feels-like">
+<div class="container">
+          <div class="col-xs-12 col-md-8 well-section" >
 
             <h2>At MSU Denver, that’s what it feels like to
 reimagine what’s <span class="possible-word">possible</span> in higher
