--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -89,12 +89,10 @@ possible every day.</p>
 
       <div class="footer">
         <div class="container">
-      <div class="col-sm-12 col-md-4 offset-md-2">
-          LOGO
-      </div>
-      <div class="col-sm-12 col-md-5">
-            <span>Reimagine</span><span> possible</span>
-            <p>copyright Metropolitan State Univerisity of Denver</p>
+      <div class="col-sm-12">
+          <img style="max-width:200px; margin-right: 20vw" class="img-responsive university-logo float-left" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
+            <p class="possible-footer">Reimagine <span class="possible-word">possible</span></p>
+            <p>Metropolitan State Univerisity of Denver</p>
       </div>
       </div>
       </div>
