adds pride graphic to possible

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -44,24 +44,27 @@
 
 <section class="section-feels-like">
 <div class="container">
-          <div class="col-xs-12 col-md-8 well-section" >
-
-            <h2>At MSU Denver, that’s what it feels like to
-reimagine what’s <span class="possible-word">possible</span> in higher
-education.</h2>
-            <p>We offer a dynamic urban setting, small class
-sizes and an incredible network of organizations
-who partner with us, offer internships, and recruit
-our graduates. We have degrees in sought-after
-fields and we’re leading the way across all areas
-of study in excellence, innovation and opportunity.
-You can even create your own degree, based on
-your unique passions.
-In the months ahead, visit this page to read our
-stories, be inspired, and imagine what could be
-possible for your future.</p>
+  <h2 style="margin-bottom:30px;">At MSU Denver, that’s what it feels like to reimagine what’s <span class="possible-word">possible</span> in higher
+      education.</h2>
+  <div class="row">
+          <div class="col-6" >
+                <p>We offer a dynamic urban setting, small class
+                sizes and an incredible network of organizations
+                who partner with us, offer internships, and recruit
+                our graduates. We have degrees in sought-after
+                fields and we’re leading the way across all areas
+                of study in excellence, innovation and opportunity.
+                You can even create your own degree, based on
+                your unique passions.
+                In the months ahead, visit this page to read our
+                stories, be inspired, and imagine what could be
+                possible for your future.</p>
           </div>
+          <div class="col-6" >
+<img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
 
+          </div>
+</div>
 
 
           </div>
@@ -90,7 +93,7 @@ possible every day.</p>
       <div class="footer">
         <div class="container">
       <div class="col-sm-12">
-          <img style="max-width:200px; margin-right: 20vw" class="img-responsive university-logo float-left" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
+          <img style="max-width:200px; margin-right: 20vw" class="img-fluid university-logo float-left" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
             <p class="possible-footer">Reimagine <span class="possible-word">possible</span></p>
             <p>Metropolitan State Univerisity of Denver</p>
       </div>
