--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -95,7 +95,7 @@ possible every day.</p>
       <div class="col-sm-12">
           <img style="max-width:200px; margin-right: 20vw" class="img-fluid university-logo float-left" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
             <p class="possible-footer">Reimagine <span class="possible-word">possible</span></p>
-            <p>Metropolitan State Univerisity of Denver</p>
+            <p>Metropolitan State University of Denver</p>
       </div>
       </div>
       </div>
