--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="initial-scale=1">
    <title>MSU Denver - Reimagine Possible</title>
    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/6990192/css/fonts.css" />
-   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+   <script src="https://kit.fontawesome.com/7d379a052d.js"></script>
    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="style-assets/css/possible.css" />
@@ -20,13 +20,10 @@
         <div class="col-xs-12">
             <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
           </div>
-          <div class="col-xs-12 col-md-4">
-            <i class="fas fa-chevron-down"></i>
-          </div>
             <div class="col-xs-12 col-sm-6 offset-sm-6 col-md-3 offset-md-8">
             <img class="img-responsive university-logo" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
           </div>
-
+          <span class="possible-indicator fas fa-chevron-down fa-5x"></span>
       </div>
       </section>
       <section class="start_your_possible">
@@ -40,6 +37,7 @@
           </div>
           </div>
         </div>
+
       </section>
 
 <section class="section-feels-like">
@@ -95,7 +93,7 @@ possible every day.</p>
       <div class="col-sm-12">
           <img style="max-width:200px; margin-right: 20vw" class="img-fluid university-logo float-left" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
             <p class="possible-footer">Reimagine <span class="possible-word">possible</span></p>
-            <p>Metropolitan State University of Denver</p>
+            <p class="copyright">&copy; 2019 Metropolitan State University of Denver. All Rights reserved.</p>
       </div>
       </div>
       </div>
