adds better spacing for sections

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -46,8 +46,7 @@
       education.</h2>
   <div class="row">
           <div class="col-6" >
-                <p>We offer a dynamic urban setting, small class
-                sizes and an incredible network of organizations
+                <p>We offer a dynamic urban setting, and an incredible network of organizations
                 who partner with us, offer internships, and recruit
                 our graduates. We have degrees in sought-after
                 fields and we’re leading the way across all areas
@@ -72,7 +71,7 @@
 <section class="possible-call-to-action">
 
   <div class="col-xs-12 col-md-10 offset-md-1 well">
-    <h2>Start Your <span class="possible-word">Possible</span></h2>
+    <h2>Start your <span class="possible-word">possible</span></h2>
     <p>
 MSU Denver is where classes lead to careers
 and learners connect with leaders. Our
@@ -81,8 +80,9 @@ learners in undergraduate and masters’
 programs who have taken a variety of paths to
 arrive here and who are discovering their own
 possible every day.</p>
-<p> <strong>Ready to find your possible?</strong></p>
-<span class="btn col-xs-12 col-sm-6"> Request information</span> <span class="col-xs-12 col-sm-6"> Apply to MSU Denver</span>
+<p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
+
+<button class="col-xs-12 col-sm-6 col-md-4 offset-md-2 btn"> Request information</button> <button class="col-xs-12 col-sm-5 col-md-4 offset-md-1 btn"> Apply to MSU Denver</button>
 
   </div>
 </section>
