--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -21,9 +21,9 @@
             <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
           </div>
             <div class="col-xs-12 col-sm-6 offset-sm-6 col-md-3 offset-md-8">
-            <img class="img-responsive university-logo" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
+            <img class="img-responsive university-logo fade-in" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
           </div>
-          <span class="possible-indicator fas fa-chevron-down fa-5x"></span>
+          <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span>
       </div>
       </section>
       <section class="start_your_possible">
@@ -82,7 +82,7 @@ arrive here and who are discovering their own
 possible every day.</p>
 <p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
 
-<button class="col-xs-12 col-sm-6 col-md-4 offset-md-2 btn"> Request information</button> <button class="col-xs-12 col-sm-5 col-md-4 offset-md-1 btn"> Apply to MSU Denver</button>
+<button class="col-xs-12 col-sm-6 col-md-4 offset-md-1 btn"> Request information</button> <button class="col-xs-12 col-sm-4 col-md-4 offset-md-2 btn"> Apply to MSU Denver</button>
 
   </div>
 </section>
